# gsv

./: .gitignore  AGENTS.md  README.md  TODOS.md  install.sh
.github/workflows/: ci.yml  release.yml
channels/discord/: README.md  wrangler.jsonc
channels/discord/src/: discord-gateway.ts  index.ts  types.ts
channels/test/: package.json  tsconfig.json  wrangler.jsonc
channels/test/src/: index.ts
channels/whatsapp/: README.md  package-lock.json  package.json  wrangler.jsonc
channels/whatsapp/patches/: @whiskeysockets+baileys+6.7.21.patch
channels/whatsapp/src/: auth-store.ts  axios-shim.ts  channel-types.ts  gateway-client.ts  index.ts  types.ts  whatsapp-account.ts  ws-shim.ts
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  connection.rs  deploy.rs  gateway_client.rs  lib.rs  main.rs  protocol.rs  transfer.rs
cli/src/tools/: bash.rs  mod.rs
cli/tests/: tools_test.rs
docs/: CODING_AGENT_V1_WORKPLAN.md  SKILLS_CONFIG.md  index.md  package.json
docs/.vitepress/: config.ts
docs/explanation/: agent-loop.md  architecture.md  channel-model.md  context-compaction.md  security-model.md
docs/how-to/: configure-agent.md  deploy.md  manage-channels.md  manage-sessions.md  run-a-node.md  set-up-cron.md
docs/reference/: cli-commands.md  configuration.md  native-tools.md  node-tools.md  r2-storage.md  session-routing.md  skills-frontmatter.md  websocket-protocol.md  workspace-files.md
docs/tutorials/: getting-started.md  setting-up-a-channel.md  writing-a-skill.md
gateway/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
gateway/alchemy/: cli.ts  deploy.ts  infra.ts
gateway/alchemy/e2e/: channel-rpc.test.ts  gateway.test.ts
gateway/alchemy/wizard/: index.ts
gateway/alchemy/wizard/steps/: channels.ts
gateway/src/: channel-interface.ts  config.test.ts  config.ts  gateway.test.ts  gateway.ts  heartbeat.ts  index.ts  media-store.ts  session.test.ts  session.ts  storage.ts  stored.test.ts  transcription.ts  types.ts  workspace.ts
gateway/src/agents/: loader.ts  prompt.test.ts  prompt.ts
gateway/src/agents/tools/: constants.ts  cron.ts  gateway.ts  index.ts  tools.test.ts  transfer.ts  workspace.ts
gateway/src/config/: config.test.ts  defaults.ts  index.ts
gateway/src/cron/: index.ts  schedule.test.ts  schedule.ts  service.ts  store.ts  types.ts
gateway/src/gateway/: commands.test.ts  commands.ts  directives.ts  do.ts  rpc-handlers.ts  transfers.ts  transport-handlers.ts
gateway/src/gateway/rpc-handlers/: channel.ts  chat.ts  config.ts  connect.ts  cron.ts  heartbeat.ts  index.ts  logs.ts  pairing.ts  session.ts  tools.ts  transfer.ts
gateway/src/protocol/: channel.ts  chat.ts  frames.ts  logs.ts  methods.ts  session.ts  tools.ts  transfer.ts
gateway/src/session/: compaction.test.ts  compaction.ts  do.ts  index.ts  reset.ts  routing.test.ts  routing.ts  session.test.ts  tokens.ts
gateway/src/shared/: persisted-object.test.ts  persisted-object.ts  utils.ts
gateway/src/skills/: index.ts
gateway/src/storage/: archive.ts  media.ts
gateway/src/workspace/: loader.ts  prompt.test.ts  prompt.ts  tools.ts
gateway/ui/: package.json
gateway/ui/src/: styles.css
gateway/ui/src/styles/: base.css  chat.css  components.css  layout.css
gateway/ui/src/ui/: app.ts  gateway-client.ts  storage.ts  types.ts
gateway/ui/src/ui/views/: config.ts  workspace.ts
scripts/: build-cloudflare-bundles.sh
templates/skills/coding-agent/: SKILL.md
templates/skills/e2e-proof/: SKILL.md
