[package]
name = "gsv"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4.2"
chrono = "0.4"
dirs = "5"
glob = "0.3"
walkdir = "2"
regex = "1"
toml = "0.8"
qrcode = "0.14"

# Use rustls everywhere for portability (no OpenSSL dependency)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Ensure rustls has a crypto provider (ring)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
